// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`requestProcedure tevm_setAccount should handle account throwing an unexpected error 1`] = `
{
  "error": {
    "code": -32603,
    "data": {
      "errors": [
        
"Unexpected error setting account

Docs: https://tevm.sh/reference/tevm/errors/classes/internalerror/
Details: unexpected error
Version: 1.1.0.next-73"
,
      ],
    },
    "message": 
"Unexpected error setting account

Docs: https://tevm.sh/reference/tevm/errors/classes/internalerror/
Details: unexpected error
Version: 1.1.0.next-73"
,
  },
  "id": 1,
  "jsonrpc": "2.0",
  "method": "tevm_setAccount",
}
`;

exports[`requestProcedure tevmCall with script should handle the evm throwing an error 1`] = `
{
  "error": {
    "code": -32000,
    "data": {
      "errors": [
        
"revert

Docs: https://tevm.sh/reference/tevm/errors/classes/reverterror/
Details: {"error":"revert","errorType":"EvmError"}
Version: 1.1.0.next-73"
,
      ],
    },
    "message": 
"revert

Docs: https://tevm.sh/reference/tevm/errors/classes/reverterror/
Details: {"error":"revert","errorType":"EvmError"}
Version: 1.1.0.next-73"
,
  },
  "id": 1,
  "jsonrpc": "2.0",
  "method": "tevm_call",
}
`;

exports[`requestProcedure ethSignTransactionHandler should sign a message 1`] = `
{
  "id": 1,
  "jsonrpc": "2.0",
  "method": "eth_signTransaction",
  "result": "0x01f8650a01843b9aca00179469696969696969696969696969696969696969698201a400c001a0ec3b403f47a52d7a911b124236bd8400d771f91bcbb7dbeca60492454d18d196a0243610f3f5b1e5a479e8553ad097b05cb53819fa0925a78ecacc243619222ca8",
}
`;
